fix large gap between slider and postlist

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ article {
 }
 
 .slider {
-	height: 400px !important;
+	height: 375px !important;
 }
 
 .slider .slides {
